--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Link Organiser</title>
-    <script type="module" crossorigin src="/assets/index.c2efd0e7.js"></script>
-    <link rel="stylesheet" href="/assets/index.3d39cfd4.css">
+    <script type="module" crossorigin src="/link-organiser/assets/index.c2efd0e7.js"></script>
+    <link rel="stylesheet" href="/link-organiser/assets/index.3d39cfd4.css">
   </head>
   <body>
     <div id="root"></div>
